@@ -1,24 +1,22 @@
 # Fluffy J Memory
-Adding some fluff to [Java's foreign memory abstraction](https://openjdk.org/jeps/412) ❤
+Adding some fluff to [Java's Foreign Function and Memory API](https://openjdk.org/jeps/424) ❤
 
 ## Prerequisites
-This software requires Java 17 and Maven >= 3.3.x. However, it is best to use a current Maven version, i. e. >= 3.8.x.
+This software requires Java 19 and Maven >= 3.3.x. However, it is best to use a current Maven version, i. e. >= 3.8.x.
 
 ## Build
 Usually a `mvn clean install` should be enough.
 
 ## IDE Setup
-Due to the usage of Java 17 incubator code, the following special setup is required:  
-* Add the following to the startup JVM options of your IDE (e. g. eclipse.ini):
+Due to the usage of Java 19 preview code, the following special setup is required:  
+* Add the following to the startup JVM option of your IDE (e. g. eclipse.ini):
 
 ```
---add-modules=ALL-SYSTEM,jdk.incubator.foreign
+--enable-preview
 --enable-native-access=ALL-UNNAMED
---add-opens=java.base/java.util=ALL-UNNAMED
---add-opens java.base/java.lang=ALL-UNNAMED
 ```
-* Add the following JVM options to launch configurations in order to be able to run (tests) from within the IDE:
-```--add-modules=ALL-SYSTEM,jdk.incubator.foreign --enable-native-access=ALL-UNNAMED```
+* Add the following JVM option to launch configurations in order to be able to run (tests) from within the IDE:
+```--enable-native-access=ALL-UNNAMED --enable-preview```
 
 ## CAUTION
 Due to the nature of unchecked memory access, it is possible to program all sort of weird things like "pointer magic", "ill-casting" data, address / read / write dangerous memory areas, etc. In most of these cases, the JVM will crash and / or the OS will prevent anything bad from happening **but this is not guaranteed**.  
@@ -76,11 +74,11 @@ System.out.println(valuePtr.dereference()); // prints contents of segment valueP
 ```
 String testStr = "testStr";
 MemoryAddress ptr = FluffyMemory.segment().of(testStr).allocate().address();
-NativeMethodHandle<Long> strlen = NativeMethodHandle
+NativeMethodHandle<Long> strlen = FluffyNativeMethodHandle
     .fromCStdLib()
     .returnType(long.class)
     .func("strlen")
-    .args(CLinker.C_POINTER);
+    .args(ValueLayout.ADDRESS);
   
 System.out.println(strlen.call(ptr)); // prints 7
 ```
@@ -97,10 +95,10 @@ new Random().nextBytes(primitiveBuf);
 Byte[] buf = ArrayUtils.toObject(primitiveBuf);
 FluffyVectorSegment<Byte> bufSeg = FluffyMemory.segment().ofArray(buf).allocate();
   
-NativeMethodHandle<Void> qsort = NativeMethodHandle.fromCStdLib()
+FluffyNativeMethodHandle<Void> qsort = FluffyNativeMethodHandle.fromCStdLib()
     .noReturnType()
     .func("qsort")
-    .args(CLinker.C_POINTER, CLinker.C_INT, CLinker.C_INT, CLinker.C_POINTER);
+    .args(ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.ADDRESS);
   
 MemoryAddress comparator = FluffyMemory.pointer()
     .toCFunc("qsort_comparator")
@@ -115,12 +113,12 @@ System.out.println(Arrays.toString(bufSeg.getValue())); // Prints sorted buf
   
 // 0.. equal, -1.. left larger, 1.. right larger
 public int qsort_comparator(MemoryAddress left, MemoryAddress right) {
-    ResourceScope scope = ResourceScope.globalScope();
+    MemorySession session = MemorySession.global();
     long sizeOfOneElmInByte = 1L;
-    Byte leftByte = FluffyMemory.wrap(left.asSegment(sizeOfOneElmInByte, scope)).as(Byte.class).getValue();
-    Byte rightByte = FluffyMemory.wrap(right.asSegment(sizeOfOneElmInByte, scope)).as(Byte.class).getValue();
-  
-    var result = 0;
+    Byte leftByte = wrap(MemorySegment.ofAddress(left, 1, session)).as(Byte.class).getValue();
+    Byte rightByte = wrap(MemorySegment.ofAddress(right, 1, session)).as(Byte.class).getValue();
+        
+    int result = 0;
     if (leftByte < rightByte) {
         result = -1;
     } else if (leftByte > rightByte) {
@@ -137,9 +135,9 @@ public int qsort_comparator(MemoryAddress left, MemoryAddress right) {
 System.loadLibrary("lib_name_known_to_system_linker");
 var lib = SymbolLookup.loaderLookup();
   
-NativeMethodHandle<Long> func = NativeMethodHandle
+FluffyNativeMethodHandle<Long> func = FluffyNativeMethodHandle
     .fromLib(lib)
-    .withLinker((symbol, srcFuncType, targetMethodType) -> myLinker.link(symbol, targetMethodType, srcFuncType))
+    .withLinker((symbol, srcFuncType) -> myLinker.link(symbol, srcFuncType))
     .withTypeConverter(new MyCustomTypeConverter())
     .returnType(long.class)
     .func("myFunc")
